--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
     "chart.js": "^2.7.2",
+    "cross-env": "^5.2.0",
     "expose-loader": "^0.7.4",
     "file-saverjs": "^1.3.6",
     "fs": "0.0.1-security",
